kubernetes/app1/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs-app
  template:
    metadata:
      labels:
        app: nextjs-app
    spec:
      containers:
        - name: nextjs-app
          image: nextjs-app:latest
          imagePullPolicy: IfNotPresent 
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  type: LoadBalancer  
  selector:
    app: nextjs-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
